--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 
     <!--Scripts for JS-->
+
+    <script src="./js/Player.js"></script>
+    <script src="./js/objectPosition.js"></script>
     <script src="./js/platforms.js"></script>
+    <script src="./js/movementPlatform.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/index.js"></script>
