--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./js/Player.js"></script>
     <script src="./js/objectPosition.js"></script>
     <script src="./js/platforms.js"></script>
+    <script src="./js/base.js"></script>
     <script src="./js/movementPlatform.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/game.js"></script>
