--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
     <!--Scripts for JS-->
+    <script src="./js/healthBar.js"></script>
     <script src="./js/enemies.js"></script>
+    <script src="./js/powerUp.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/objectPosition.js"></script>
     <script src="./js/platforms.js"></script>
