--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 
 
     <!--Scripts for JS-->
+    <script src="./js/levelUp.js"></script>
+    <script src="./js/winScreen.js"></script>
+    <script src="./js/sounds.js"></script>
     <script src="./js/healthBar.js"></script>
     <script src="./js/enemies.js"></script>
     <script src="./js/powerUp.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/objectPosition.js"></script>
     <script src="./js/platforms.js"></script>
+    <script src="./js/meta.js"></script>
     <script src="./js/base.js"></script>
     <script src="./js/background.js"></script>
+    <script src="./js/gameOver.js"></script>
+    <script src="./js/startScreen.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/index.js"></script>
 </body>
